# paro

./: .gitignore  CMakeLists.txt  GPATH  GRTAGS  GTAGS  README.md  TDD-boost-turtle-training.sublime-project  TDD-boost-turtle-training.sublime-workspace  bogus-calculator-part.cc  bogus-calculator.cc  boost-playground.cc  boost-turtle-training.kdev4  bug-introducer.cc  bug-introducer.hpp  calculator-tests.cc  calculator.cc  calculator.hpp  config.h.in  interfaces.h  problem.cc  problem.hpp  run-all-tests  tests-tester.cc  third-party.cpp
.kdev4/: boost-turtle-training.kdev4
implementation/: calculator-other-part.cc  calculator-tests.cc  calculator.cc  implementation-other-part.cc  implementation-tests.cc  implementation.cc  implementation.hpp  interfaces.h
original_boost_mt_core/: CMakeLists.txt  CompileRunMTAllDomains.bat  TestCompileDomainAndMT.bat  TestCompileMT.bat
original_boost_mt_core/.svn/: wc.db
original_boost_mt_core/CMake/Domain/: CMakeLists.txt
original_boost_mt_core/CMake/FoundationModel/: CMakeLists.txt
original_boost_mt_core/CMake/InternalInterfaces/: CMakeLists.txt
original_boost_mt_core/CMake/SSW/: CMakeLists.txt
original_boost_mt_core/CMake/SSW_FML_Workaround/: CMakeLists.txt
original_boost_mt_core/common_stubs/: AaCpu_asm_x86.h  DBManagerAttacher.cpp  DBManagerMock.h  EventConstraint.h  OAMFixture.cpp  OAMFixture.h  Timeout.h  bosse_sct_stub.cpp  ccs_default_impl.cpp  ccs_default_impl.h  ccs_sic_stub.cpp  ccs_stub.cpp  generic_stub.h  message_format.cpp  message_format.h  oxf_timeout_stub.cpp
original_boost_mt_core/helpers/: EventTraits.cpp  EventTraits.h  MakeEventResponse.h
original_boost_mt_core/test_framework/: ConsoleOutputHandlerWIN32.cpp  JUnitXmlWriter.cpp  JUnitXmlWriter.h  LeakReporter.cpp  MessageQueue.cpp  MessageQueue.h  SubCase.h  TestRunner.cpp  ThreadPool.h  dbg_prints.cpp  env_time.cpp  init.cpp  list_logchecker.h  log_barrier.cpp  log_barrier.h  logchecker.cpp  logchecker.h  logcheckerstreamer.h  logformatting.h  multiregex_logchecker.cpp  print_writer.cpp  soap_logchecker.h  string_logchecker.cpp  string_logchecker.h  substring_logchecker.h  test_tools.h  xml_output_integrator.h
original_boost_mt_core/test_framework/crashhandler/: CrashHandler.cpp  CrashHandler.h
original_boost_mt_core/test_framework/turtle/: config.hpp  function.hpp
original_boost_mt_core/test_framework/turtle_obmc/: obmc_boost_test_error.hpp
refactoring-task/: CMakeLists.txt  main.cc
test_framework/turtle/: config.hpp  mock.hpp
